# dices

./: dices.cabal
src/: Dices.hs  Game.hs  Main.hs  RPParty.hs
