name:                 dices
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Alexey Scripkin
maintainer:           a.scripkin@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable dices
  main-is:              Main.hs
  other-modules:        Dices
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, random
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options: 
        -O2
 